Update: listing all photos of the same album id
