# src/routes/photo.routes.js
@@ -1,11 +1,11 @@
 import express from 'express';
-import {addPhotos, deletePhoto} from '../controllers/photo.controller.js'
+import {addPhotos, deletePhoto, getPhotoByAlbumId} from '../controllers/photo.controller.js'
 import upload from '../middleware/multer.js';
 
 const photoRoute = express.Router();
 
 photoRoute.post('/add', upload.single('file'), addPhotos)
 photoRoute.delete('/delete/:id', deletePhoto)
-
+photoRoute.get('/getphoto/:albumId', getPhotoByAlbumId)
 
 export default photoRoute;
